--- a/music-player/index.html
+++ b/music-player/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./style.css" />
   <title>Music Player</title>
 </head>
+<!-- /comment -->
 
 <body class="bg-[#F6F6F6] flex justify-center items-center h-screen">
   <div class="bg-white w-72 shadow-sm">
